Fixed the Todo Item Overflow (#326)

--- a/style.css
+++ b/style.css
@@ -605,6 +605,7 @@ body {
 	user-select: none;
 	cursor: pointer;
 	position: relative;
+	word-break: break-word;
 }
 .todolistitem::before{
 	content: '';
